@@ -33,7 +33,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 5, 2008
+.Dd January 14, 2008
 .Dt ATF 7
 .Os
 .Sh NAME
@@ -100,6 +100,8 @@ Internal utilities:
 Safely cleans up a work directory after a test case terminates.
 .It Xr atf-format 1
 Reformats a text string to not overflow terminal boundaries.
+.It Xr atf-kill-tree 1
+Recursively kills a process tree.
 .El
 .Pp
 Programming interfaces:
@@ -163,6 +165,8 @@ Everything recommeded to developers.
 .Xr atf-cleanup 1
 .It
 .Xr atf-format 1
+.It
+.Xr atf-kill-tree 1
 .El
 .Sh HISTORY
 .Nm
