@@ -7,3 +7,4 @@ tp: t_atf_compile
 tp: t_atf_cleanup
 tp: t_atf_run
 tp: t_atf_report
+tp: t_atf_kill_tree
